--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Music Sensation for Store Application</title>
-		<link rel="stylesheet" type="text/html" href="/main.css">
+		<link rel="stylesheet" type="text/css" href="./main.css">
 	</head>
 	<body>
 		<header>
