--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 				<!-- search and social media (put their stuff) header -->
 				<nav id="socialmedia">
 					<ul>
-						<li><a href="https://www.facebook.com/nightwish" target="_blank"><img src="../imgproject/facebook.png"></a></li>
+						<li><a href="https://www.facebook.com/nightwish" target="_blank"><img src="/imgproject/facebook.png"></a></li>
 						<li><a href="https://twitter.com/nightwishband" target="_blank"><img src="./imgproject/twitter.png"></a></li>
 						<li><a href="https://www.youtube.com/channel/UCQplaZZ2mv8fo8Zd-1hQPzg" target="_blank"><img src="./imgproject/youtube.png"></a></li>
 						<li><input type="text" name="search" placeholder="The Dish on Nightwish"></li>
